web: Fix menu not working on small screens

--- a/web/static/less/mixins/navbar.less
+++ b/web/static/less/mixins/navbar.less
@@ -88,7 +88,7 @@
 	    }
 	}
 
-	@media (max-width: 1200px) {
+	@media (max-width: 768px) {
             // Dropdowns get custom display
 	    .open .dropdown-menu {
 		> .dropdown-header {
